--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,5 +12,7 @@
     <form th:action="@{/logout}" th:method="POST">
         <button type="submit">Sign Out</button>
     </form>
+
+    <a th:href="@{/account}">My account</a>
 </body>
 </html>
