--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -3,10 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <title>Account</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/account.css}">
 </head>
 <body>
-    <p>It's account!</p>
-    <br>
-    <a th:href="@{/collection/new}">New collection</a>
-</body>
+    <div id="account">
+        <div class="text-center" style="font-size:22px">
+            My collections
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <table class="table table-fixedheader collection-table table-hover table-bordered table-striped" style="height:80%">
+                    <thead >
+                    <tr>
+                        <th style="display: none">id</th>
+                        <th style="width: 25%">Name</th>
+                        <th style="width: 25%">Description</th>
+                        <th style="width: 25%">Count items</th>
+                        <th style="width: 25%">Image</th>
+                    </tr>
+                    </thead>
+                    <tbody style="height:500px" >
+                    <th:block th:each="collection:${collections}">
+                        <tr th:attr="onclick=|goToCollection('${collection.getId()}')|,
+                                     oncontextmenu=|contextMenu(event,'${collection.getId()}')|">
+                            <td style="display: none" th:value="${collection.getId()}"></td>
+                            <td style="width: 25%" th:utext="${collection.getName()}"></td>
+                            <td style="width: 25%" th:utext="${collection.getDescription}"></td>
+                            <td style="width: 25%" th:utext="${collection.getCountItems()}"></td>
+                            <td style="width: 25%">
+                                <img style="width:100px;height: 100px" th:src="${collection.getImage()}" alt="">
+                            </td>
+                        </tr>
+                    </th:block>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <button type="button" class="btn btn-outline-success" onclick="newCollection()" >New collection</button>
+        <br>
+        <form th:action="@{/}" th:method="get">
+            <button type="submit" class="btn btn-outline-success" >Main page</button>
+        </form>
+    </div>
+
+    <div class="right-click-area">
+        <ul class="right-click-menu">
+            <li id="l1">Edit</li>
+            <li id="l2">Delete</li>
+            <form id="form-edit" th:method="GET"></form>
+            <form id="form-delete"  th:method="POST"></form>
+        </ul>
+    </div>
+
+    </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+
+    tempId = null;
+
+    function newCollection(){
+        document.location.href="/collection/new";
+    }
+    function goToCollection(id){
+
+    }
+    function contextMenu(event,id){
+        event.preventDefault();
+        const menu = document.querySelector(".right-click-menu");
+        menu.style.top = `${event.clientY}px`;
+        menu.style.left = `${event.clientX}px`;
+        tempId=id;
+        menu.classList.add("active");
+    }
+</script>
+
+<script th:inline="javascript">
+
+    const menu = document.querySelector(".right-click-menu");
+
+    document.addEventListener("click", event => {
+        if (event.button !== 2) {
+            menu.classList.remove("active");
+        }
+    }, false);
+
+    menu.addEventListener("click", event => {
+        event.stopPropagation();
+    }, false);
+
+    document.querySelector("#l1").addEventListener("click", () => {
+        menu.classList.remove('active');
+        let form =  document.getElementById("form-edit");
+        /*<![CDATA[*/
+        form.action=/*[[@{/collection/edit}]]*/
+        /*]]>*/
+        form.action+='/'+tempId;
+        console.log(form.action);
+        form.submit()
+    }, false);
+    document.querySelector("#l2").addEventListener("click", () => {
+        menu.classList.remove('active');
+        let form = document.getElementById("form-delete");
+        /*<![CDATA[*/
+        form.action=/*[[@{/collection/delete}]]*/
+        /*]]>*/
+        form.action+='?id='+tempId;
+        form.submit();
+    }, false);
+
+
+
+
+</script>
 </html>
