--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,14 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Main</title>
 </head>
 <body>
+<div th:insert="~{fragments/head_fragment :: head}" th:if="${name}"></div>
+<div th:insert="~{fragments/head_fragment :: head2}" th:unless="${name}"></div>
     <p th:text="${name}"></p>
     <form th:action="@{/logout}" th:method="POST">
         <button type="submit">Sign Out</button>
     </form>
 
     <a th:href="@{/account}">My account</a>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
