--- a/src/main/resources/templates/new_collection.html
+++ b/src/main/resources/templates/new_collection.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <title>New</title>
     <link rel="stylesheet" th:href="@{/css/new_collection.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
+<div th:insert="~{fragments/head_fragment :: head}"></div>
+
 <form th:action="@{/collection/new}" th:method="POST" enctype="multipart/form-data">
     <label for="name">Name:</label>
     <input type="text" name="name" id="name" th:value="${collection == null ? '' : collection.getName()}" >
@@ -63,5 +67,7 @@
     </div>
 
     <script type="text/javascript" th:src="@{/js/new_collection.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
