--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <title>Signup</title>
     <link rel="stylesheet" th:href="@{/css/new_collection.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
+<div th:insert="~{fragments/head_fragment :: head2}"></div>
+
 
 <div th:if="${user_exists}">
     user already exists!
 </div>
 
 <form th:action = "@{/signup}" th:method = "POST">
+
     <label for="login">Login:</label>
     <input type="text" id="login" name="login" th:value="${user == null ? '' : user.getLogin()}">
     <br>
@@ -43,5 +48,8 @@
         </p>
     </div>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
