--- a/src/main/resources/templates/fragments/head_fragment.html
+++ b/src/main/resources/templates/fragments/head_fragment.html
@@ -14,13 +14,14 @@
                 </div>
             </div>
 
-            <form class="form-inline nav">
+            <form class="form-inline nav" th:method="GET" th:action="@{/items/search}">
                 <div style="margin-right:8px">
-                    <input class="form-control input-small" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control input-small" type="search" placeholder="Search" aria-label="Search" name="search">
                 </div>
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-            <div class="navbar" id="signOut">
+
+        <div class="navbar" id="signOut">
                 <div class="navbar-nav">
                     <a class="nav-link" th:href="@{/logout}">Sign out</a>
                 </div>
@@ -42,12 +43,12 @@
             </div>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+
         <div class="navbar" id="signOut"></div>
     </div>
 </nav>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
 </body>
 </html>
